--- a/analysis.qmd
+++ b/analysis.qmd
@@ -1,5 +1,62 @@
 ---
-title: "Untitled"
+title: "A Beautiful Graphic"
+author: Jeff Swensen
 format: html
+execute:
+    echo: false
 ---
 
+```{r}
+suppressPackageStartupMessages(library(tidyverse))
+```
+
+```{r}
+#| warning: false
+# Create the plot
+mpg |>
+  ggplot(aes(x = displ, y = hwy, color = class, size = cyl)) +
+  geom_point(alpha = 0.7, stroke = 0) +
+  geom_smooth(
+    method = "loess",
+    se = FALSE,
+    color = "darkgray",
+    linewidth = 0.8
+  ) +
+  scale_color_viridis_d(name = "Vehicle Class", option = "plasma") +
+  scale_size_continuous(
+    name = "Cylinders",
+    range = c(2, 6),
+    breaks = c(4, 6, 8),
+    labels = c("4", "6", "8")
+  ) +
+  scale_x_continuous(breaks = seq(1, 7, 1)) +
+  scale_y_continuous(breaks = seq(10, 45, 5)) +
+  labs(
+    title = "Fuel Efficiency vs Engine Displacement",
+    subtitle = "Highway MPG decreases with larger engine displacement across vehicle classes",
+    x = "Engine Displacement (liters)",
+    y = "Highway Miles per Gallon",
+    caption = "Data: EPA fuel economy data from 1999-2008"
+  ) +
+  theme_minimal(base_size = 12) +
+  theme(
+    plot.title = element_text(size = 16, face = "bold", margin = margin(b = 5)),
+    plot.subtitle = element_text(
+      size = 12,
+      color = "gray50",
+      margin = margin(b = 15)
+    ),
+    plot.caption = element_text(size = 9, color = "gray60"),
+    legend.position = "right",
+    legend.box = "vertical",
+    legend.spacing.y = unit(0.5, "cm"),
+    panel.grid.minor = element_blank(),
+    panel.grid.major = element_line(color = "gray90", linewidth = 0.3),
+    plot.background = element_rect(fill = "white", color = NA),
+    panel.background = element_rect(fill = "white", color = NA)
+  ) +
+  guides(
+    color = guide_legend(override.aes = list(size = 4, alpha = 1)),
+    size = guide_legend(override.aes = list(alpha = 1))
+  )
+```
